# floshy_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml  release.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: check-setup.sh  check.bat  deploy-rpi.sh  setup-rpi.sh  test-ssh.sh  webhook-receiver.sh
src/: main.py
src/cogs/: birthday.py  setup_lol.py
src/lol/: client.py  exceptions.py  service.py
src/utils/: logger.py
tests/: __init__.py  conftest.py  test.py  test_birthday.py  test_bot.py  test_logger.py  test_lol_client.py  test_lol_service.py  test_main.py  test_setup_lol.py
