[project]
name = "floshy-bot"
version = "0.1.0"
description = "Bot discord performant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "riotwatcher>=3.3.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[project.scripts]
bot = "src.main:main"
